Added weighted f1 score to evaluation metrics and ran cross validation for 100MB, i.e. around 10%, of the data

--- a/emoji-prediction/results_analysis.ipynb
+++ b/emoji-prediction/results_analysis.ipynb
@@ -13,121 +13,108 @@
    },
    "outputs": [],
    "source": [
-    "from pickle import load"
+    "from pickle import load\n",
+    "from numpy import mean\n",
+    "from numpy import std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
+   "execution_count": 30,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 models evaluated\n"
+     ]
+    }
+   ],
    "source": [
-    "results = load(open('results.pkl', 'rb'))"
+    "results = load(open('results.pkl', 'rb'))\n",
+    "print('%d models evaluated' % len(results))\n",
+    "rearranged_results = {}\n",
+    "for model_name, scores in results.items():\n",
+    "    rearranged_results[model_name] = {}\n",
+    "    for metric_dict in scores:\n",
+    "        for metric, value in metric_dict.items():\n",
+    "            if metric not in rearranged_results[model_name]:\n",
+    "                rearranged_results[model_name][metric] = []\n",
+    "            rearranged_results[model_name][metric].append(value)\n",
+    "results = rearranged_results"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-14T23:25:41.027838Z",
-     "start_time": "2023-12-14T23:25:40.929361Z"
+     "end_time": "2023-12-15T00:15:40.248890Z",
+     "start_time": "2023-12-15T00:15:40.242920Z"
     }
    },
    "id": "7fd9a12d224d3b15"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded: 3\n"
-     ]
+     "data": {
+      "text/plain": "{'baseline': {'average_accuracy': [0.17702467934106283,\n   0.1770257699250251,\n   0.1770196092926978,\n   0.1770196092926978,\n   0.1770196092926978],\n  'weighted_f1_score': [0.05324907395034404,\n   0.05324968070927474,\n   0.05324625320893333,\n   0.05324625320893333,\n   0.05324625320893333]},\n 'one_gram': {'average_accuracy': [0.25947191385024826,\n   0.26094590348753394,\n   0.26035448278411294,\n   0.2602805551961853,\n   0.2588020034376328],\n  'weighted_f1_score': [0.21150393616717722,\n   0.21392094201550657,\n   0.21312203954023484,\n   0.2122250997720593,\n   0.2114992873692819]},\n 'four_gram': {'average_accuracy': [0.4031184928721923,\n   0.40474738327141896,\n   0.4032749921451938,\n   0.40262196511849974,\n   0.40254187689824483],\n  'weighted_f1_score': [0.3950598627929097,\n   0.3961727411103994,\n   0.3950760168776577,\n   0.3939448833614575,\n   0.3949353910124403]}}"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('Loaded: %d' % len(results))"
+    "results"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-14T23:26:02.637776Z",
-     "start_time": "2023-12-14T23:26:02.633432Z"
+     "end_time": "2023-12-15T00:15:42.045907Z",
+     "start_time": "2023-12-15T00:15:42.030840Z"
     }
    },
-   "id": "93cfd31de6efdf25"
+   "id": "75276e371b373337"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'baseline': [0.17662993289416978, 0.17662993289416978, 0.17662993289416978, 0.17656836791233146, 0.17656836791233146], 'one_gram': [0.23764082989595517, 0.23493197069506863, 0.2332697161854337, 0.2341931909130087, 0.23191528658499047], 'four_gram': [0.2922489687865542, 0.2977898171520039, 0.2944037431508958, 0.2868928153666195, 0.2847380410022779]}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(results)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-14T23:27:06.640510Z",
-     "start_time": "2023-12-14T23:27:06.635273Z"
-    }
-   },
-   "id": "d3610ea28d2120bc"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "from numpy import mean\n",
-    "from numpy import std"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-14T23:26:03.603875Z",
-     "start_time": "2023-12-14T23:26:03.600050Z"
-    }
-   },
-   "id": "340a9dc0f9181057"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "baseline\n",
-      "Mean Accuracy: 0.177%\n",
-      "Standard Deviation: 0.000\n",
+      "Mean average_accuracy: 0.17702185542883625\n",
+      "Std average_accuracy: 2.7724769911887585e-06\n",
+      "Mean weighted_f1_score: 0.05324750285728376\n",
+      "Std weighted_f1_score: 1.5424808392888136e-06\n",
       "one_gram\n",
-      "Mean Accuracy: 0.234%\n",
-      "Standard Deviation: 0.002\n",
+      "Mean average_accuracy: 0.25997097175114264\n",
+      "Std average_accuracy: 0.0007495278805905062\n",
+      "Mean weighted_f1_score: 0.21245426097285197\n",
+      "Std weighted_f1_score: 0.0009449537736506922\n",
       "four_gram\n",
-      "Mean Accuracy: 0.291%\n",
-      "Standard Deviation: 0.005\n"
+      "Mean average_accuracy: 0.40326094206110996\n",
+      "Std average_accuracy: 0.0007943982489437778\n",
+      "Mean weighted_f1_score: 0.39503777903097287\n",
+      "Std weighted_f1_score: 0.0007063983292705417\n"
      ]
     }
    ],
    "source": [
     "for model_name, scores in results.items():\n",
     "    print(model_name)\n",
-    "    print('Mean Accuracy: %.3f%%' % (mean(scores)))\n",
-    "    print('Standard Deviation: %.3f' % (std(scores)))"
+    "    for metric, value in scores.items():\n",
+    "        print(f\"Mean {metric}: {mean(value)}\")\n",
+    "        print(f\"Std {metric}: {std(value)}\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-14T23:28:54.519393Z",
-     "start_time": "2023-12-14T23:28:54.515017Z"
+     "end_time": "2023-12-15T00:15:45.082767Z",
+     "start_time": "2023-12-15T00:15:45.079535Z"
     }
    },
    "id": "4ded4967e9054ee6"
