--- a/emoji_prediction/results_analysis.ipynb
+++ b/emoji_prediction/results_analysis.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-18T11:57:35.925026Z",
-     "start_time": "2023-12-18T11:57:35.840538Z"
+     "end_time": "2024-01-22T15:20:21.120964Z",
+     "start_time": "2024-01-22T15:20:20.632891Z"
     }
    },
    "outputs": [],
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 models evaluated\n"
+      "4 models evaluated\n"
      ]
     }
    ],
@@ -46,8 +46,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-18T11:57:35.935393Z",
-     "start_time": "2023-12-18T11:57:35.927402Z"
+     "end_time": "2024-01-22T15:20:21.126024Z",
+     "start_time": "2024-01-22T15:20:21.121226Z"
     }
    },
    "id": "7fd9a12d224d3b15"
@@ -58,7 +58,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'baseline': {'weighted_accuracy': [0.17707820954254797,\n   0.17707820954254797,\n   0.17707820954254797,\n   0.17695523856369896,\n   0.17695523856369896],\n  'weighted_f1_score': [0.05327885953641226,\n   0.05327885953641226,\n   0.05327885953641226,\n   0.053210445782710857,\n   0.053210445782710857],\n  'confunsion_matrix': [array([[   0,  193,    0, ...,    0,    0,    0],\n          [   0, 1440,    0, ...,    0,    0,    0],\n          [   0,  107,    0, ...,    0,    0,    0],\n          ...,\n          [   0,   79,    0, ...,    0,    0,    0],\n          [   0,    2,    0, ...,    0,    0,    0],\n          [   0,    3,    0, ...,    0,    0,    0]]),\n   array([[   0,  193,    0, ...,    0,    0,    0],\n          [   0, 1440,    0, ...,    0,    0,    0],\n          [   0,  107,    0, ...,    0,    0,    0],\n          ...,\n          [   0,   80,    0, ...,    0,    0,    0],\n          [   0,    2,    0, ...,    0,    0,    0],\n          [   0,    3,    0, ...,    0,    0,    0]]),\n   array([[   0,  192,    0, ...,    0,    0,    0],\n          [   0, 1440,    0, ...,    0,    0,    0],\n          [   0,  108,    0, ...,    0,    0,    0],\n          ...,\n          [   0,   80,    0, ...,    0,    0,    0],\n          [   0,    2,    0, ...,    0,    0,    0],\n          [   0,    3,    0, ...,    0,    0,    0]]),\n   array([[   0,  193,    0, ...,    0,    0,    0],\n          [   0, 1439,    0, ...,    0,    0,    0],\n          [   0,  108,    0, ...,    0,    0,    0],\n          ...,\n          [   0,   80,    0, ...,    0,    0,    0],\n          [   0,    2,    0, ...,    0,    0,    0],\n          [   0,    4,    0, ...,    0,    0,    0]]),\n   array([[   0,  193,    0, ...,    0,    0,    0],\n          [   0, 1439,    0, ...,    0,    0,    0],\n          [   0,  108,    0, ...,    0,    0,    0],\n          ...,\n          [   0,   80,    0, ...,    0,    0,    0],\n          [   0,    3,    0, ...,    0,    0,    0],\n          [   0,    3,    0, ...,    0,    0,    0]])]},\n 'one_gram': {'weighted_accuracy': [0.22589768814559763,\n   0.22257747171667486,\n   0.21581406787998034,\n   0.22860304968027545,\n   0.21839645843580915],\n  'weighted_f1_score': [0.17596002904612776,\n   0.17215670647715803,\n   0.16747404436464727,\n   0.17933188919489726,\n   0.17028335662554214],\n  'confunsion_matrix': [array([[  16,  112,    0, ...,    0,    0,    0],\n          [  27, 1037,    9, ...,    1,    0,    0],\n          [   1,   37,   25, ...,    2,    0,    0],\n          ...,\n          [   1,   21,    0, ...,   22,    0,    0],\n          [   0,    0,    0, ...,    0,    2,    0],\n          [   0,    1,    0, ...,    0,    2,    0]]),\n   array([[  15,  113,    1, ...,    1,    0,    0],\n          [  18, 1033,    4, ...,    2,    0,    0],\n          [   0,   34,   29, ...,    0,    0,    0],\n          ...,\n          [   2,   24,    0, ...,   17,    0,    0],\n          [   0,    1,    0, ...,    0,    0,    0],\n          [   0,    1,    0, ...,    0,    0,    0]]),\n   array([[  20,  105,    1, ...,    1,    0,    0],\n          [  28, 1002,   17, ...,    1,    0,    0],\n          [   0,   34,   29, ...,    0,    0,    0],\n          ...,\n          [   1,   28,    2, ...,   14,    0,    0],\n          [   0,    2,    0, ...,    0,    0,    0],\n          [   0,    3,    0, ...,    0,    0,    0]]),\n   array([[  13,  108,    2, ...,    1,    0,    0],\n          [  18, 1020,   14, ...,    6,    0,    0],\n          [   0,   40,   27, ...,    0,    0,    0],\n          ...,\n          [   0,   39,    0, ...,   16,    0,    0],\n          [   0,    0,    0, ...,    0,    1,    1],\n          [   0,    4,    0, ...,    0,    0,    0]]),\n   array([[ 20, 110,   0, ...,   0,   0,   0],\n          [ 22, 985,   5, ...,   1,   0,   0],\n          [  0,  36,  23, ...,   1,   0,   0],\n          ...,\n          [  2,  32,   1, ...,  14,   0,   0],\n          [  0,   2,   0, ...,   0,   0,   1],\n          [  0,   0,   0, ...,   0,   2,   1]])]},\n 'four_gram': {'weighted_accuracy': [0.26549434333497296,\n   0.2673389080177078,\n   0.26155927201180523,\n   0.26426463354648305,\n   0.264879488440728],\n  'weighted_f1_score': [0.22488703469988547,\n   0.22485624209127045,\n   0.2191651890410497,\n   0.22138665266061028,\n   0.22330197659052933],\n  'confunsion_matrix': [array([[  23,  135,    0, ...,    0,    0,    0],\n          [  13, 1267,    2, ...,    0,    0,    0],\n          [   1,   77,   22, ...,    0,    0,    0],\n          ...,\n          [   0,   62,    0, ...,   15,    0,    0],\n          [   0,    2,    0, ...,    0,    0,    0],\n          [   0,    2,    0, ...,    0,    1,    0]]),\n   array([[  32,  124,    0, ...,    0,    0,    0],\n          [  21, 1288,    1, ...,    0,    0,    0],\n          [   0,   75,   24, ...,    0,    0,    0],\n          ...,\n          [   0,   63,    0, ...,   10,    0,    0],\n          [   0,    2,    0, ...,    0,    0,    0],\n          [   0,    3,    0, ...,    0,    0,    0]]),\n   array([[  35,  127,    1, ...,    0,    0,    0],\n          [  16, 1260,    1, ...,    0,    0,    0],\n          [   0,   76,   21, ...,    0,    0,    0],\n          ...,\n          [   0,   67,    0, ...,   11,    0,    0],\n          [   0,    2,    0, ...,    0,    0,    0],\n          [   0,    3,    0, ...,    0,    0,    0]]),\n   array([[  28,  148,    0, ...,    0,    0,    0],\n          [  10, 1275,    4, ...,    0,    0,    0],\n          [   0,   81,   20, ...,    0,    0,    0],\n          ...,\n          [   0,   69,    0, ...,    7,    0,    0],\n          [   0,    2,    0, ...,    0,    0,    0],\n          [   0,    4,    0, ...,    0,    0,    0]]),\n   array([[  24,  141,    0, ...,    0,    0,    0],\n          [  15, 1278,    3, ...,    0,    0,    0],\n          [   0,   83,   21, ...,    0,    0,    0],\n          ...,\n          [   0,   67,    0, ...,   10,    0,    0],\n          [   0,    2,    0, ...,    0,    0,    1],\n          [   0,    2,    0, ...,    0,    0,    1]])]}}"
+      "text/plain": "{'Quadrant Discriminant Analysis': {'weighted_accuracy': [0.11124372477606063,\n   0.111342159661384,\n   0.1113189206482017,\n   0.1106052589484564,\n   0.11112204845516852],\n  'weighted_f1_score': [0.11057117906510917,\n   0.10856604910051786,\n   0.10912125185935477,\n   0.10873337730314903,\n   0.10964139489606312],\n  'confusion_matrix': [array([[134,   5,   9, ...,  29,   4,   3],\n          [ 97, 168,  34, ..., 293,  17,   4],\n          [  1,   5, 334, ...,  51,   1,   1],\n          ...,\n          [  2,   0,  16, ..., 369,   0,   0],\n          [  0,   1,   1, ...,   2,   2,   9],\n          [  0,   0,   0, ...,   2,   0,  10]]),\n   array([[165,   6,   5, ...,  25,   1,   4],\n          [129, 141,  37, ..., 321,   3,   5],\n          [  3,   7, 334, ...,  54,   0,   0],\n          ...,\n          [  2,   0,  10, ..., 362,   0,   1],\n          [  0,   0,   0, ...,   3,   1,   7],\n          [  0,   0,   0, ...,   1,   1,  10]]),\n   array([[151,  10,   4, ...,  28,   9,   5],\n          [111, 148,  40, ..., 295,   9,   7],\n          [  1,   5, 354, ...,  55,   0,   1],\n          ...,\n          [  2,   1,   8, ..., 407,   0,   0],\n          [  0,   0,   0, ...,   0,   0,   4],\n          [  0,   0,   0, ...,   2,   0,  11]]),\n   array([[132,   9,   3, ...,  31,   9,   0],\n          [117, 128,  41, ..., 284,  10,   0],\n          [  4,   4, 370, ...,  51,   0,   2],\n          ...,\n          [  1,   1,  11, ..., 365,   0,   0],\n          [  0,   0,   0, ...,   3,   3,   3],\n          [  1,   0,   0, ...,   5,   1,  10]]),\n   array([[134,   3,   8, ...,  38,   8,   1],\n          [140, 149,  36, ..., 371,   7,   4],\n          [  1,   8, 347, ...,  73,   0,   0],\n          ...,\n          [  5,   0,  22, ..., 386,   0,   0],\n          [  0,   0,   1, ...,   1,   0,   5],\n          [  0,   0,   0, ...,   3,   1,   8]])]},\n 'k_neighbors': {'weighted_accuracy': [0.3079658430947928,\n   0.31019293237523377,\n   0.3095938280567484,\n   0.31060279804604346,\n   0.31047975292539776],\n  'weighted_f1_score': [0.295922838272863,\n   0.2962416629367038,\n   0.2971620917846922,\n   0.2974668770911732,\n   0.2984003675594695],\n  'confusion_matrix': [array([[ 602,  555,    9, ...,    1,    0,    0],\n          [ 861, 8642,  106, ...,    7,    0,    0],\n          [  24,  145,  442, ...,    5,    0,    0],\n          ...,\n          [  14,   94,   28, ...,  226,    0,    0],\n          [   0,    2,    3, ...,    0,    9,    8],\n          [   1,    3,    0, ...,    0,    8,   13]]),\n   array([[ 608,  657,   15, ...,    2,    0,    0],\n          [ 817, 8709,   94, ...,   12,    0,    0],\n          [  16,  179,  463, ...,    3,    0,    0],\n          ...,\n          [  18,   90,   23, ...,  268,    0,    0],\n          [   0,    4,    2, ...,    0,    9,    6],\n          [   0,    7,    0, ...,    0,    5,   11]]),\n   array([[ 588,  647,   10, ...,    1,    0,    0],\n          [ 857, 8575,   96, ...,    8,    0,    0],\n          [  29,  153,  451, ...,    2,    0,    0],\n          ...,\n          [  18,   98,   24, ...,  295,    0,    0],\n          [   0,    1,    0, ...,    0,    5,    6],\n          [   0,    0,    0, ...,    0,    9,   10]]),\n   array([[ 615,  621,    9, ...,    0,    0,    0],\n          [ 843, 8735,   86, ...,   10,    0,    0],\n          [  24,  133,  502, ...,    3,    0,    0],\n          ...,\n          [  18,  112,   19, ...,  236,    0,    0],\n          [   1,    1,    0, ...,    0,    4,    9],\n          [   0,    3,    0, ...,    0,   12,    6]]),\n   array([[ 585,  583,   17, ...,    3,    0,    0],\n          [ 887, 8652,   87, ...,   10,    0,    0],\n          [  18,  161,  487, ...,    7,    0,    0],\n          ...,\n          [  16,   94,   32, ...,  295,    0,    0],\n          [   0,    2,    0, ...,    0,    7,    5],\n          [   1,    4,    1, ...,    0,   10,    7]])]},\n 'naive_bayes': {'weighted_accuracy': [0.05341322964858746,\n   0.053068707549955706,\n   0.05308166504657258,\n   0.05338927784818693,\n   0.05254026651573132],\n  'weighted_f1_score': [0.024790617489485255,\n   0.0252795574599506,\n   0.025338205695705843,\n   0.02548659472487273,\n   0.024954139458053557],\n  'confusion_matrix': [array([[  0,   1,  18, ...,  35,   5,   1],\n          [  0,  14, 139, ..., 239,  43,  29],\n          [  0,   1, 225, ...,  76,  10,   4],\n          ...,\n          [  0,   0,  12, ..., 269,  15,   6],\n          [  0,   0,   0, ...,   1,   5,  20],\n          [  0,   0,   1, ...,   0,   3,  17]]),\n   array([[  0,   1,  19, ...,  38,   7,   1],\n          [  0,  13, 126, ..., 268,  43,  17],\n          [  0,   0, 235, ...,  81,  12,   1],\n          ...,\n          [  0,   0,  12, ..., 248,  17,   4],\n          [  0,   0,   0, ...,   0,   8,   9],\n          [  0,   0,   0, ...,   0,   9,  12]]),\n   array([[  0,   0,  13, ...,  28,   8,   2],\n          [  0,  16, 119, ..., 221,  73,  23],\n          [  0,   0, 229, ...,  69,  16,   3],\n          ...,\n          [  0,   1,  14, ..., 258,  34,   5],\n          [  0,   0,   0, ...,   0,   4,   7],\n          [  0,   0,   0, ...,   0,   5,  17]]),\n   array([[  0,   3,  16, ...,  41,   6,   0],\n          [  0,  19, 116, ..., 252,  42,  20],\n          [  0,   1, 247, ...,  85,  10,   5],\n          ...,\n          [  0,   1,  12, ..., 263,  20,   5],\n          [  0,   0,   0, ...,   0,   9,   7],\n          [  0,   0,   0, ...,   0,   9,  12]]),\n   array([[  0,   2,   7, ...,  31,   4,   2],\n          [  0,  24, 109, ..., 261,  46,  28],\n          [  0,   1, 238, ...,  85,  13,   1],\n          ...,\n          [  0,   2,  25, ..., 263,  24,   9],\n          [  0,   0,   0, ...,   2,   2,  11],\n          [  0,   0,   0, ...,   0,   2,  14]])]},\n 'logistic_regression': {'weighted_accuracy': [0.22905797814745546,\n   0.22483758243921645,\n   0.2266245032053254,\n   0.2289008379372716,\n   0.22674754832597113],\n  'weighted_f1_score': [0.14402399632130702,\n   0.1405803441190239,\n   0.1414514388395412,\n   0.14378835748755162,\n   0.14125786492600903],\n  'confusion_matrix': [array([[    0,  1654,     6, ...,     1,     0,     0],\n          [    5, 12759,    45, ...,    25,     0,     1],\n          [    0,   340,   285, ...,     8,     1,     0],\n          ...,\n          [    0,   211,    17, ...,   190,     0,     0],\n          [    0,     7,     0, ...,     0,     5,    14],\n          [    0,     4,     0, ...,     0,     5,    16]]),\n   array([[    0,  1787,     6, ...,     4,     0,     1],\n          [    1, 12608,    32, ...,    22,     0,     3],\n          [    0,   365,   292, ...,    12,     0,     0],\n          ...,\n          [    0,   193,    16, ...,   201,     0,     1],\n          [    0,    11,     0, ...,     0,     2,    11],\n          [    0,     4,     0, ...,     0,     7,    10]]),\n   array([[    2,  1706,     5, ...,     2,     0,     0],\n          [    0, 12640,    22, ...,    23,     0,     2],\n          [    0,   346,   270, ...,     9,     0,     0],\n          ...,\n          [    3,   240,    18, ...,   182,     1,     0],\n          [    0,     5,     0, ...,     0,     3,     8],\n          [    0,     3,     0, ...,     0,     9,    12]]),\n   array([[    0,  1712,     3, ...,     1,     0,     0],\n          [    3, 12765,    27, ...,    20,     1,     1],\n          [    0,   337,   298, ...,    12,     0,     0],\n          ...,\n          [    0,   253,    10, ...,   189,     1,     0],\n          [    0,     7,     0, ...,     0,     8,     5],\n          [    0,     3,     0, ...,     0,     8,    14]]),\n   array([[    0,  1667,     5, ...,     1,     1,     0],\n          [    0, 12722,    38, ...,    18,     0,     1],\n          [    1,   361,   291, ...,    15,     0,     0],\n          ...,\n          [    0,   254,    23, ...,   198,     1,     1],\n          [    0,     5,     0, ...,     1,     6,     8],\n          [    0,     4,     0, ...,     0,     3,    14]])]}}"
      },
      "execution_count": 3,
      "metadata": {},
@@ -71,35 +71,40 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-18T11:57:35.949390Z",
-     "start_time": "2023-12-18T11:57:35.938834Z"
+     "end_time": "2024-01-22T15:20:21.143168Z",
+     "start_time": "2024-01-22T15:20:21.131256Z"
     }
    },
    "id": "75276e371b373337"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "baseline\n",
-      "Mean weighted_accuracy: 17.7\n",
+      "Quadrant Discriminant Analysis\n",
+      "Mean weighted_accuracy: 11.1\n",
       "Std weighted_accuracy: 0.0\n",
-      "Mean weighted_f1_score: 5.3\n",
+      "Mean weighted_f1_score: 10.9\n",
+      "Std weighted_f1_score: 0.1\n",
+      "k_neighbors\n",
+      "Mean weighted_accuracy: 31.0\n",
+      "Std weighted_accuracy: 0.1\n",
+      "Mean weighted_f1_score: 29.7\n",
+      "Std weighted_f1_score: 0.1\n",
+      "naive_bayes\n",
+      "Mean weighted_accuracy: 5.3\n",
+      "Std weighted_accuracy: 0.0\n",
+      "Mean weighted_f1_score: 2.5\n",
       "Std weighted_f1_score: 0.0\n",
-      "one_gram\n",
-      "Mean weighted_accuracy: 22.2\n",
-      "Std weighted_accuracy: 0.5\n",
-      "Mean weighted_f1_score: 17.3\n",
-      "Std weighted_f1_score: 0.4\n",
-      "four_gram\n",
-      "Mean weighted_accuracy: 26.5\n",
+      "logistic_regression\n",
+      "Mean weighted_accuracy: 22.7\n",
       "Std weighted_accuracy: 0.2\n",
-      "Mean weighted_f1_score: 22.3\n",
-      "Std weighted_f1_score: 0.2\n"
+      "Mean weighted_f1_score: 14.2\n",
+      "Std weighted_f1_score: 0.1\n"
      ]
     }
    ],
@@ -114,8 +119,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-18T12:26:25.888331Z",
-     "start_time": "2023-12-18T12:26:25.882487Z"
+     "end_time": "2024-01-22T15:20:21.143678Z",
+     "start_time": "2024-01-22T15:20:21.136545Z"
     }
    },
    "id": "4ded4967e9054ee6"
